--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <ul class="nav navbar-nav">
                 <li onclick="reloadStats()"><a href="#">load stats</a></li>
                 <li onclick="loadFile()"><a href="#">load file</a></li>
-                <li><a href="#">Page 2</a></li>
+                <li onclick="oneStep()"><a href="#">one step</a></li>
                 <li><a>klúčov: <span id="keys">32</span></a></li>
                 <li><a>v zozname: <span id="queue">32</span></a></li>
                 <li><a>uložených: <span id="links">32</span></a></li>
@@ -43,18 +43,43 @@
                        $("#keys").text(data.keys);
                        $("#queue").text(data.queue);
                        $("#links").text(data.links);
-                  },"json")
+                  }, "json")
               }
               function loadFile() {
                   $.get("./load", {}, function(data) {
-
+                    alert(data);
                   });
+              }
+
+              function oneStep() {
+                $.get("./oneStep", {}, function(data){
+                  const table = $(`
+                    <tr>
+                        <td class="title"></td>
+                        <td class="url"></td>
+                        <td><span class="newLinks"></span>/<span class="links"></span></td>
+                        <td><span class="newKeys"></span>/<span class="keys"></span></td>
+                    </tr>`);
+                  table.find(".title").text(data.title);
+                  table.find(".url").text(data.url);
+                  table.find(".links").text(data.links);
+                  table.find(".newLinks").text(data.newLinks);
+                  table.find(".keys").text(data.keys);
+                  table.find(".newKeys").text(data.newKeys);
+                  $("#dataWrapper").append(table);
+                }, "json");
               }
           </script>
           <div class="container"  style="margin-top:50px">
             <h3>Navbar Forms</h3>
-
-            <div class="well well-lg">Large Well</div>
+            <table id="dataWrapper" class="table table-striped table-hover">
+              <tr>
+                <th>Title</th>
+                <th>Url</th>
+                <th>Links (new/all)</th>
+                <th>Keys (new/all)</th>
+              </tr>
+            </table>
           </div>
     </body>
 </html>
